# fizzbuzz_benchmark

./: Cargo.toml
benches/: rust-fizzbuzz.rs
src/: lib.rs
